# simple_scp

./: README.md  clean_all.sh  make_all.sh
simple_client/: CMakeLists.txt  main.cpp
